--- a/trunk/Depend/hge181/src/core/hge.vcxproj
+++ b/trunk/Depend/hge181/src/core/hge.vcxproj
@@ -143,6 +143,7 @@
       </DataExecutionPrevention>
       <ImportLibrary>..\..\Lib\$(Configuration)\$(ProjectName).lib</ImportLibrary>
       <TargetMachine>MachineX86</TargetMachine>
+      <AdditionalLibraryDirectories>$(SolutionDir)Depend\DX81SDK\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
