--- a/Depend/Visual Leak Detector/src/vld.vcxproj.filters
+++ b/Depend/Visual Leak Detector/src/vld.vcxproj.filters
@@ -18,10 +18,10 @@
     <ClCompile Include="callstack.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="crtmfcpatch.cpp">
+    <ClCompile Include="ntapi.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ntapi.cpp">
+    <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="utility.cpp">
@@ -56,6 +56,9 @@
     <ClInclude Include="set.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="stdafx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="tree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="vldint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="vld_def.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
