--- a/trunk/Depend/MyGUI/Platforms/DirectX/DirectXPlatform/MyGUI.DirectXPlatform.vcproj
+++ b/trunk/Depend/MyGUI/Platforms/DirectX/DirectXPlatform/MyGUI.DirectXPlatform.vcproj
@@ -54,7 +54,7 @@
 				AdditionalOptions=" /Zm1000 /fp:fast"
 				Optimization="0"
 				InlineFunctionExpansion="0"
-				AdditionalIncludeDirectories="..\MyGUIEngine\include;..\Platforms\DirectX\DirectXPlatform\include"
+				AdditionalIncludeDirectories=".\include;..\..\..\MyGUIEngine\include;&quot;$(DXSDK_DIR)\Include&quot;"
 				PreprocessorDefinitions="WIN32,_WINDOWS,_DEBUG,CMAKE_INTDIR=\&quot;Debug\&quot;"
 				ExceptionHandling="1"
 				BasicRuntimeChecks="3"
@@ -80,7 +80,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="D:\SDK\MyGui\lib\Debug\MyGUI.DirectXPlatform_d.lib"
+				OutputFile="..\..\..\lib\Debug\MyGUI.DirectXPlatform.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -137,7 +137,7 @@
 				AdditionalOptions=" /Zm1000 /fp:fast"
 				Optimization="2"
 				InlineFunctionExpansion="2"
-				AdditionalIncludeDirectories="..\MyGUIEngine\include;..\Platforms\DirectX\DirectXPlatform\include"
+				AdditionalIncludeDirectories=".\include;..\..\..\MyGUIEngine\include;&quot;$(DXSDK_DIR)\Include&quot;"
 				PreprocessorDefinitions="WIN32,_WINDOWS,NDEBUG,CMAKE_INTDIR=\&quot;Release\&quot;"
 				ExceptionHandling="1"
 				RuntimeLibrary="2"
@@ -161,7 +161,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="D:\SDK\MyGui\lib\Release\MyGUI.DirectXPlatform.lib"
+				OutputFile="..\..\..\lib\Release\MyGUI.DirectXPlatform.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -218,7 +218,7 @@
 				AdditionalOptions=" /Zm1000 /fp:fast"
 				Optimization="1"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="..\MyGUIEngine\include;..\Platforms\DirectX\DirectXPlatform\include"
+				AdditionalIncludeDirectories=".\include;..\..\..\MyGUIEngine\include;&quot;$(DXSDK_DIR)\Include&quot;"
 				PreprocessorDefinitions="WIN32,_WINDOWS,NDEBUG,CMAKE_INTDIR=\&quot;MinSizeRel\&quot;"
 				ExceptionHandling="1"
 				RuntimeLibrary="2"
@@ -242,7 +242,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="D:\SDK\MyGui\lib\MinSizeRel\MyGUI.DirectXPlatform.lib"
+				OutputFile="..\..\..\lib\MinSizeRel\MyGUI.DirectXPlatform.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -299,7 +299,7 @@
 				AdditionalOptions=" /Zm1000 /fp:fast"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="..\MyGUIEngine\include;..\Platforms\DirectX\DirectXPlatform\include"
+				AdditionalIncludeDirectories=".\include;..\..\..\MyGUIEngine\include;&quot;$(DXSDK_DIR)\Include&quot;"
 				PreprocessorDefinitions="WIN32,_WINDOWS,NDEBUG,CMAKE_INTDIR=\&quot;RelWithDebInfo\&quot;"
 				ExceptionHandling="1"
 				RuntimeLibrary="2"
@@ -324,7 +324,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="D:\SDK\MyGui\lib\RelWithDebInfo\MyGUI.DirectXPlatform.lib"
+				OutputFile="..\..\..\lib\RelWithDebInfo\MyGUI.DirectXPlatform.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
