--- a/trunk/Depend/MyGUI/Tools/ImageSetViewer/ImageSetViewer.vcproj
+++ b/trunk/Depend/MyGUI/Tools/ImageSetViewer/ImageSetViewer.vcproj
@@ -54,7 +54,7 @@
 				AdditionalOptions=" /Zm1000 /fp:fast"
 				Optimization="0"
 				InlineFunctionExpansion="0"
-				AdditionalIncludeDirectories="\.;..\Common;..\Common\Base\DirectX;..\Common\Input\Win32;..\MyGUIEngine\include;..\Platforms\DirectX\DirectXPlatform\include"
+				AdditionalIncludeDirectories="\.;..\..\Common;..\..\Common\Base\DirectX;..\..\Common\Input\Win32;..\..\MyGUIEngine\include;..\..\Platforms\DirectX\DirectXPlatform\include;&quot;$(DXSDK_DIR)Include&quot;"
 				PreprocessorDefinitions="WIN32,_WINDOWS,_DEBUG,MYGUI_DIRECTX_PLATFORM,MYGUI_SAMPLES_INPUT_WIN32,CMAKE_INTDIR=\&quot;Debug\&quot;"
 				ExceptionHandling="1"
 				BasicRuntimeChecks="3"
@@ -83,11 +83,11 @@
 				Name="VCLinkerTool"
 				LinkLibraryDependencies="false"
 				AdditionalOptions=" /STACK:10000000 /machine:I386 /debug"
-				AdditionalDependencies="$(NOINHERIT) kernel32.lib user32.lib gdi32.lib winspool.lib shell32.lib ole32.lib oleaut32.lib uuid.lib comdlg32.lib advapi32.lib  ..\..\lib\Debug\Common_d.lib ..\..\lib\Debug\MyGUI.DirectXPlatform_d.lib ..\..\lib\Debug\MyGUIEngine_d.lib D:\SDK\D3D9Mar09\Lib\x86\d3d9.lib D:\SDK\D3D9Mar09\Lib\x86\d3dx9.lib D:\SDK\D3D9Mar09\Lib\x86\DxErr9.lib D:\SDK\D3D9Mar09\Lib\x86\dxguid.lib D:\SDK\Ogre3D\Dependencies\lib\debug\freetype2311_D.lib "
-				OutputFile="D:\SDK\MyGui\bin\Debug\ImageSetViewer.exe"
+				AdditionalDependencies="Common.lib MyGUI.DirectXPlatform.lib MyGUIEngine.lib d3d9.lib d3dx9.lib DxErr9.lib dxguid.lib freetype2311_D.lib"
+				OutputFile="..\..\bin\$(ConfigurationName)\ImageSetViewer.exe"
 				Version="0.0"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories=""
+				AdditionalLibraryDirectories="&quot;$(DXSDK_DIR)Lib\x86&quot;;..\..\Lib\Debug;..\..\..\freetype\Lib\Debug"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="D:/SDK/MyGui/bin/Debug/ImageSetViewer.pdb"
 				SubSystem="2"
@@ -154,7 +154,7 @@
 				AdditionalOptions=" /Zm1000 /fp:fast"
 				Optimization="2"
 				InlineFunctionExpansion="2"
-				AdditionalIncludeDirectories="\.;..\Common;..\Common\Base\DirectX;..\Common\Input\Win32;..\MyGUIEngine\include;..\Platforms\DirectX\DirectXPlatform\include"
+				AdditionalIncludeDirectories="\.;..\..\Common;..\..\Common\Base\DirectX;..\..\Common\Input\Win32;..\..\MyGUIEngine\include;..\..\Platforms\DirectX\DirectXPlatform\include;&quot;$(DXSDK_DIR)Include&quot;"
 				PreprocessorDefinitions="WIN32,_WINDOWS,NDEBUG,MYGUI_DIRECTX_PLATFORM,MYGUI_SAMPLES_INPUT_WIN32,CMAKE_INTDIR=\&quot;Release\&quot;"
 				ExceptionHandling="1"
 				RuntimeLibrary="2"
@@ -181,11 +181,11 @@
 				Name="VCLinkerTool"
 				LinkLibraryDependencies="false"
 				AdditionalOptions=" /STACK:10000000 /machine:I386"
-				AdditionalDependencies="$(NOINHERIT) kernel32.lib user32.lib gdi32.lib winspool.lib shell32.lib ole32.lib oleaut32.lib uuid.lib comdlg32.lib advapi32.lib  ..\..\lib\Release\Common.lib ..\..\lib\Release\MyGUI.DirectXPlatform.lib ..\..\lib\Release\MyGUIEngine.lib D:\SDK\D3D9Mar09\Lib\x86\d3d9.lib D:\SDK\D3D9Mar09\Lib\x86\d3dx9.lib D:\SDK\D3D9Mar09\Lib\x86\DxErr9.lib D:\SDK\D3D9Mar09\Lib\x86\dxguid.lib D:\SDK\Ogre3D\Dependencies\lib\release\freetype2311.lib "
-				OutputFile="D:\SDK\MyGui\bin\Release\ImageSetViewer.exe"
+				AdditionalDependencies="Common.lib MyGUI.DirectXPlatform_d.lib MyGUIEngine_d.lib d3d9.lib d3dx9.lib DxErr9.lib dxguid.lib freetype2311.lib"
+				OutputFile="..\..\bin\$(ConfigurationName)\ImageSetViewer.exe"
 				Version="0.0"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories=""
+				AdditionalLibraryDirectories="&quot;$(DXSDK_DIR)Lib\x86&quot;;..\..\Lib\Release;..\..\..\freetype\Lib\Release"
 				ProgramDatabaseFile="D:/SDK/MyGui/bin/Release/ImageSetViewer.pdb"
 				SubSystem="2"
 				ImportLibrary="D:\SDK\MyGui\lib\Release\ImageSetViewer.lib"
@@ -251,7 +251,7 @@
 				AdditionalOptions=" /Zm1000 /fp:fast"
 				Optimization="1"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="\.;..\Common;..\Common\Base\DirectX;..\Common\Input\Win32;..\MyGUIEngine\include;..\Platforms\DirectX\DirectXPlatform\include"
+				AdditionalIncludeDirectories="\.;..\..\Common;..\..\Common\Base\DirectX;..\..\Common\Input\Win32;..\..\MyGUIEngine\include;..\..\Platforms\DirectX\DirectXPlatform\include;&quot;$(DXSDK_DIR)Include&quot;"
 				PreprocessorDefinitions="WIN32,_WINDOWS,NDEBUG,MYGUI_DIRECTX_PLATFORM,MYGUI_SAMPLES_INPUT_WIN32,CMAKE_INTDIR=\&quot;MinSizeRel\&quot;"
 				ExceptionHandling="1"
 				RuntimeLibrary="2"
@@ -278,11 +278,11 @@
 				Name="VCLinkerTool"
 				LinkLibraryDependencies="false"
 				AdditionalOptions=" /STACK:10000000 /machine:I386"
-				AdditionalDependencies="$(NOINHERIT) kernel32.lib user32.lib gdi32.lib winspool.lib shell32.lib ole32.lib oleaut32.lib uuid.lib comdlg32.lib advapi32.lib  ..\..\lib\MinSizeRel\Common.lib ..\..\lib\MinSizeRel\MyGUI.DirectXPlatform.lib ..\..\lib\MinSizeRel\MyGUIEngine.lib D:\SDK\D3D9Mar09\Lib\x86\d3d9.lib D:\SDK\D3D9Mar09\Lib\x86\d3dx9.lib D:\SDK\D3D9Mar09\Lib\x86\DxErr9.lib D:\SDK\D3D9Mar09\Lib\x86\dxguid.lib D:\SDK\Ogre3D\Dependencies\lib\release\freetype2311.lib "
-				OutputFile="D:\SDK\MyGui\bin\MinSizeRel\ImageSetViewer.exe"
+				AdditionalDependencies="Common.lib MyGUI.DirectXPlatform_d.lib MyGUIEngine_d.lib d3d9.lib d3dx9.lib DxErr9.lib dxguid.lib freetype2311.lib"
+				OutputFile="..\..\bin\$(ConfigurationName)\ImageSetViewer.exe"
 				Version="0.0"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories=""
+				AdditionalLibraryDirectories="&quot;$(DXSDK_DIR)Lib\x86&quot;;..\..\Lib\Release;..\..\..\freetype\Lib\Release"
 				ProgramDatabaseFile="D:/SDK/MyGui/bin/MinSizeRel/ImageSetViewer.pdb"
 				SubSystem="2"
 				ImportLibrary="D:\SDK\MyGui\lib\MinSizeRel\ImageSetViewer.lib"
@@ -348,7 +348,7 @@
 				AdditionalOptions=" /Zm1000 /fp:fast"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="\.;..\Common;..\Common\Base\DirectX;..\Common\Input\Win32;..\MyGUIEngine\include;..\Platforms\DirectX\DirectXPlatform\include"
+				AdditionalIncludeDirectories="\.;..\..\Common;..\..\Common\Base\DirectX;..\..\Common\Input\Win32;..\..\MyGUIEngine\include;..\..\Platforms\DirectX\DirectXPlatform\include;&quot;$(DXSDK_DIR)Include&quot;"
 				PreprocessorDefinitions="WIN32,_WINDOWS,NDEBUG,MYGUI_DIRECTX_PLATFORM,MYGUI_SAMPLES_INPUT_WIN32,CMAKE_INTDIR=\&quot;RelWithDebInfo\&quot;"
 				ExceptionHandling="1"
 				RuntimeLibrary="2"
@@ -376,11 +376,11 @@
 				Name="VCLinkerTool"
 				LinkLibraryDependencies="false"
 				AdditionalOptions=" /STACK:10000000 /machine:I386 /debug"
-				AdditionalDependencies="$(NOINHERIT) kernel32.lib user32.lib gdi32.lib winspool.lib shell32.lib ole32.lib oleaut32.lib uuid.lib comdlg32.lib advapi32.lib  ..\..\lib\RelWithDebInfo\Common.lib ..\..\lib\RelWithDebInfo\MyGUI.DirectXPlatform.lib ..\..\lib\RelWithDebInfo\MyGUIEngine.lib D:\SDK\D3D9Mar09\Lib\x86\d3d9.lib D:\SDK\D3D9Mar09\Lib\x86\d3dx9.lib D:\SDK\D3D9Mar09\Lib\x86\DxErr9.lib D:\SDK\D3D9Mar09\Lib\x86\dxguid.lib D:\SDK\Ogre3D\Dependencies\lib\release\freetype2311.lib "
-				OutputFile="D:\SDK\MyGui\bin\RelWithDebInfo\ImageSetViewer.exe"
+				AdditionalDependencies="Common.lib MyGUI.DirectXPlatform_d.lib MyGUIEngine_d.lib d3d9.lib d3dx9.lib DxErr9.lib dxguid.lib freetype2311.lib"
+				OutputFile="..\..\bin\$(ConfigurationName)\ImageSetViewer.exe"
 				Version="0.0"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories=""
+				AdditionalLibraryDirectories="&quot;$(DXSDK_DIR)Lib\x86&quot;;..\..\Lib\Release;..\..\..\freetype\Lib\Release"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="D:/SDK/MyGui/bin/RelWithDebInfo/ImageSetViewer.pdb"
 				SubSystem="2"
