增加了Lua脚本，研究了全局函数的注册方法

--- a/GameClient/GameClient.vcproj
+++ b/GameClient/GameClient.vcproj
@@ -291,6 +291,14 @@
 				RelativePath="..\Bin\Resource\defines.lua"
 				>
 			</File>
+			<Filter
+				Name="Level"
+				>
+				<File
+					RelativePath="..\Bin\Resource\level\level1.lua"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<File
 			RelativePath=".\ReadMe.txt"
